# ET_MASTER_CODE

./: README.md
ET MASTER/Airsoft design/: Airsoft 3d printed part.20260519-173118.FCBak  Airsoft 3d printed part.FCStd  Airsoft Metal Frame.20260519-173120.FCBak  Airsoft Metal Frame.FCStd
ET MASTER/ET ACRYLIC BODY v2/: acrylic body.20251117-230933.FCBak  acrylic body.FCStd
ET MASTER/ET ACRYLIC BODY v2/laser cut file/: acrylic body.dxf
ET MASTER/ET MASTER/: ET Master Design-Assembly.step  ET Master Design.20260415-104305.FCBak  ET Master Design.FCStd
ET MASTER/ET MONITOR/: ET MONITOR.20251203-012836.FCBak  ET MONITOR.FCStd  ET MONITOR.step  paper holder.step
ET MASTER/ET STAND/: ET STAND.FCStd  ET STAND.FCStd.a1232563-5f32-4a8a-8c1d-88981b52646c  NOTE TAMBAHAN.txt
ET MASTER/Metal Body V2/Part Design/: keterangan tembahan.txt
ET MASTER/Metal Body V2/Part Design/COLLECTOR/: colector.dwg  colector.dxf
ET MASTER/Metal Body V2/Part Design/FRONT PLATE/: front plate.dwg
ET MASTER/Metal Body V2/Part Design/MOTOR MOUNT/: motor mount.dwg  motor mount.dxf
ET MASTER/Metal Body V2/Part Design/PLATE CLAMP/: plate clamp.dwg
ET MASTER/Metal file/ET STAND/: ET STAND.20251117-034001.FCBak
ET MASTER/Metal file/Metal Body V2/: metal body.20251219-210922.FCBak  metal body.FCStd  metal body.FCStd.2b13863b-0fc7-43ef-b046-13c177620d35  metal body.FCStd.e0f07b29-1b47-445f-aa8a-5c6210247110
Vulpra/: IMG_4830.DNG  IMG_4837.DNG
Vulpra File/Vulpra Firmware/main/: CMakeLists.txt
Vulpra File/vulpra/: IMG_4832.DNG
(+60 files in other folders)
